Add first set of 2017 posts

--- a/content/articles/22.hands-on-with-sitecore-helix-setting-up-automated-build-packaging-continuous-delivery.md
+++ b/content/articles/22.hands-on-with-sitecore-helix-setting-up-automated-build-packaging-continuous-delivery.md
@@ -1,16 +1,20 @@
 ---
-layout: post
+cover: /articles/2017/22.1.helix-logical-architecture.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2017-01-03
 title: "Hands-on with Sitecore Helix: Setting up automated build and packaging for continuous delivery"
-tags: sitecore helix habitat automated build bamboo nuget octopus deploy modular architecture
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2017/01/03/helix-logical-architecture.png" alt="Modular architecture">
+![Modular architecture](/articles/2017/22.1.helix-logical-architecture.png)
 
-In my [previous]({{ site.url }}/2016/12/28/hands-on-with-sitecore-helix-using-powershell-add-module.html) [posts]({{ site.url }}/2016/12/29/hands-on-with-sitecore-helix-anatomy-add-helix-powershell-script.html) I've shown how our team is able to add new feature or foundation modules easily.
+In my [previous](/articles/hands-on-with-sitecore-helix-using-powershell-add-module) [posts](/articles/hands-on-with-sitecore-helix-anatomy-add-helix-powershell-script) I've shown how our team is able to add new feature or foundation modules easily.
 Now let's take a look at the effect of the modular architecture on the build and packaging of a Sitecore Helix style solution.
-This is a topic which is receiving loads of attention lately and has been blogged about before by other Sitecore [community](https://www.akshaysura.com/2016/12/27/finally-with-one-great-big-gulp-i-conquered-sitecore-helix/){:target="_blank"} [fanboys](https://www.akshaysura.com/2016/12/28/helix-and-the-re-tooling-of-your-continuous-integration-and-deployments/){:target="_blank"} ;).
-
-<!--more-->
+This is a topic which is receiving loads of attention lately and has been blogged about before by other Sitecore [community](https://www.akshaysura.com/2016/12/27/finally-with-one-great-big-gulp-i-conquered-sitecore-helix/) [fanboys](https://www.akshaysura.com/2016/12/28/helix-and-the-re-tooling-of-your-continuous-integration-and-deployments/) ;).
 
 First I need to make clear that the solution I will describe is just one of many approaches that can be taken. 
 It is meant to provide insights in the possibilities of building and packaging your Sitecore Helix solution. 
@@ -18,7 +22,7 @@ I will share my concerns of this solution in my next post.
 
 ## Modules, Modules Everywhere!
 
-Carefully read the following paragraph from the [Helix Architecure Principles](http://helix.sitecore.net/principles/architecture-principles/modules.html){:target="_blank"}:
+Carefully read the following paragraph from the [Helix Architecure Principles](http://helix.sitecore.net/principles/architecture-principles/modules.html):
 
 > "Keep in mind that in Helix, modules are business-centric. This means that they should relate to business objectives and group together multiple technology entities that refer to this objective. 
 > This principle goes against many traditional software conventions - such as the ones dictated by MVC (models, controllers and views) or even Sitecore (templates, layouts, settings) - that define grouping based on their type, rather than their business objective."
@@ -37,13 +41,13 @@ You can of course group or consolidate components which are very similar into on
 
 ### Performance vs Clarity
 
-[Some people](http://sitecore.stackexchange.com/questions/3623/sitecore-helix-habitat-and-visual-studio-structure){:target="_blank"} are against this high number of projects in one Visual Studio solution. 
+[Some people](http://sitecore.stackexchange.com/questions/3623/sitecore-helix-habitat-and-visual-studio-structure) are against this high number of projects in one Visual Studio solution. 
 Although a large number of projects does have a negative impact on Visual Studio performance I encourage the usage of this pattern.
 This is because the clarity of this modular architecture outweighs the performance issue. 
 Identifying modules is so straightforward now and this greatly helps the communication about these feature and foundation modules. 
 
 As a developer you really need some decent hardware to make this work efficiently in Visual Studio.
-If your development machine is slow, do [some calculations](https://docs.google.com/spreadsheets/d/16tzObRLEdgszbxU-un4lG6K-shiE5c39K95aSfrlXvI/edit?usp=sharing){:target="_blank"} so you can make a business case which supports your request to get a new machine.   
+If your development machine is slow, do [some calculations](https://docs.google.com/spreadsheets/d/16tzObRLEdgszbxU-un4lG6K-shiE5c39K95aSfrlXvI/edit?usp=sharing) so you can make a business case which supports your request to get a new machine.   
 
 So what do you need to do when you have a whole team producing loads of modules? Well, build & package those modules in order to deploy to other 
 environments of course so testers and end-users can marvel at your work. 
@@ -52,9 +56,9 @@ environments of course so testers and end-users can marvel at your work.
 
 You are all using source control and a centralized build environment, right?
 
-Currently I'm using [GitLab](https://about.gitlab.com/){:target="_blank"} for source control and [Bamboo](https://www.atlassian.com/software/bamboo){:target="_blank"} as the build environment. 
+Currently I'm using [GitLab](https://about.gitlab.com/) for source control and [Bamboo](https://www.atlassian.com/software/bamboo) as the build environment. 
 Although Bamboo is not one of my preferred build platforms it does the job well enough. 
-In addition [Octopus Deploy](https://octopus.com/){:target="_blank"} is used as the automated deployment environment (more of that in the next post). 
+In addition [Octopus Deploy](https://octopus.com/) is used as the automated deployment environment (more of that in the next post). 
 
 Let's have a closer look at how Visual Studio projects are configured.
 
@@ -68,11 +72,11 @@ The `Debug` configuration is the default on during local development. The `Relea
 I noticed that even in `Release` mode *.pdb (symbol) files are created during a build. 
 If you want your release build to have a small footprint (and without debugging capabilities) you can disable to creation of these files by setting the _DebugInfo_ to `none` under _Build_ > _Adanced..._:
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2017/01/03/advanced-build-settings.gif" alt="Set DebugInfo to None">
+![Set DebugInfo to None](/articles/2017/22.2.advanced-build-settings.gif)
 
 #### Packaging with Octopack
 
-Octopus provides a __very__ easy way of packaging a solution or projects as NuGet packages through the use of [Octopack](http://docs.octopusdeploy.com/display/OD/Using+OctoPack){:target="_blank"}.
+Octopus provides a __very__ easy way of packaging a solution or projects as NuGet packages through the use of [Octopack](http://docs.octopusdeploy.com/display/OD/Using+OctoPack).
 In our solution each Visual Studio project has a reference to Octopack. 
 This means that instead of one solution package there are be many packages (one per module). 
 This approach does has some drawbacks in the deployment process which I'm not too happy about as I will explain in the next post.
@@ -86,7 +90,29 @@ However you don't __need__ to provide a nuspec file if you're happy with what Vi
 But if you want files included which are __not__ included in Visual Studio projects, such as the serialized Sitecore `yml` files in our case, you need to explicitly add that to the nuspec file.
 See line 15 in this nuspec template gist:
 
-{% gist cd5c61ebc1d2f303ef3ce456752a8766 %}
+**_NamespacePrefix_._ModuleType_._Name_.nuspec**
+```xml
+<?xml version="1.0"?>
+    <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+    <metadata>
+        <id>_NamespacePrefix_._ModuleType_._Name_</id>
+        <title>_NamespacePrefix_._ModuleType_._Name_</title>
+        <version>$version$</version>
+        <authors>_Company_</authors>
+        <owners>_Company_</owners>
+        <requireLicenseAcceptance>false</requireLicenseAcceptance>
+        <description>_NamespacePrefix_._ModuleType_._Name_</description>
+        <releaseNotes>Automatic build</releaseNotes>
+        <copyright>Copyright 2016 _Company_</copyright>
+    </metadata>
+    <files>
+        <file src="..\serialization\**" target="Unicorn\_ModuleType_\_Name_\serialization" />
+        <!-- Only include roles when they are required per component.
+        <file src="..\roles\**" target="Unicorn\_ModuleType_\_Name_\roles" />
+        -->
+    </files>
+</package>
+```
 
 Three things might not be too obvious in this nuspec and are worth highlighting:
 
@@ -100,7 +126,7 @@ Everything is setup now in Visual Studio. Let's move on to the build server.
 
 The build plans in are Bamboo are quite straightforward. A plan consists of one stage having one job which has the following three tasks:
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2017/01/03/bamboo-tasks.png" alt="Bamboo tasks">
+![Bamboo tasks](/articles/2017/22.3.bamboo-tasks.png)
 
 Currently there are two build plans:
 
@@ -113,7 +139,7 @@ I just want to focus on building the solution in `Release` configuration since t
 
 The MSBuild task looks as follows:
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2017/01/03/ms-build-task.png" alt="MSBuild task">
+![MSBuild task](/articles/2017/22.4.msbuild-task.png)
 
 The _Options_ field is the most interesting (I've replaced some sensitive info): 
 
@@ -131,6 +157,6 @@ Let's have a detailed look at the build parameters:
 Now we're all set to run a build which will publish the NuGet packages for all the modules to Octopus Deploy. 
 In the next blogpost I'll go into detail how the deployment process is setup in Octopus.
 
-As already mentioned by my Sitecore community friend [Akshay](https://twitter.com/akshaysura13){:target="_blank"}:
+As already mentioned by my Sitecore community friend [Akshay](https://twitter.com/akshaysura13):
 
-> "I encourage you to discuss Helix/Habitat based conversations in the [Sitecore Slack Helix-Habitat channel](https://sitecorechat.slack.com){:target="_blank"}."
+> "I encourage you to discuss Helix/Habitat based conversations in the [Sitecore Slack Helix-Habitat channel](https://sitecorechat.slack.com)."
