--- a/content/articles/24.installing-python-azure-sdk-raspberrypi.md
+++ b/content/articles/24.installing-python-azure-sdk-raspberrypi.md
@@ -1,17 +1,21 @@
 ---
-layout: post
+cover: /articles/2017/24.pi-zero-with-camera.jpg
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2017-07-16
 title: "Installing the Python Azure SDK on a Raspberry Pi Zero"
-tags: azure sdk python raspberry pi zero
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2017/07/16/Pi Zero with camera.jpg" alt="Pi Zero with camera module">
+![Pi Zero with camera module](/articles/2017/24.pi-zero-with-camera.jpg)
 
 ## Holiday Project
 
 This summer holiday I'm working on a hobby project which involves a Raspberry Pi Zero and a Pi camera module. Part of the solution is uploading the pictures the Pi takes to the cloud, Microsoft Azure to be more specific. I plan to write a couple of blog posts about this project. This first post is about installing the Azure SDK on the Pi Zero.
 
-
-<!--more-->
 ### Python and Azure
 
 [Raspbian Jessie](https://www.raspberrypi.org/downloads/raspbian/), the Linux distribution for Raspberry Pi already has Python pre-installed and since Microsoft provides an Azure SDK for Python I decided to write an application in Python which will capture and upload the images to Azure.
