--- a/content/articles/26.durable-azure-functions-stateful-orchestrations.md
+++ b/content/articles/26.durable-azure-functions-stateful-orchestrations.md
@@ -1,16 +1,20 @@
 ---
-layout: post
+cover: /articles/2017/26.durable-functions-demo.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2017-11-05
 title: "Azure Durable Functions - Stateful function orchestrations (part 1)"
-tags: azure durable functions serverless faas stateful orchestration
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2017/11/05/DurableFunctionsDemo.png" alt="HttpStart DurableFunction">
+![HttpStart DurableFunction](/articles/2017/26.durable-functions-demo.png)
 
 ## Durable Functions
 
-Since my [Getting started with Serverless Architectures using Azure Functions]({{ site.url}}/2017/10/19/serverless-architectures-using-azure-functions.html) session at Techdays I've been closely monitoring the latest news about Azure Functions. The most recent addition is called [Durable Functions](https://docs.microsoft.com/en-us/azure/azure-functions/durable-functions-overview){:target="_blank"}. With this extension long running and stateful function orchestrations can be developed. This is a welcome addition to the Azure serverless product suite since it is now much easier to implement function chaining and fan-in/fan-out messaging scenarios.
-
-<!--more-->
+Since my [Getting started with Serverless Architectures using Azure Functions](/articles/serverless-architectures-using-azure-functions) session at Techdays I've been closely monitoring the latest news about Azure Functions. The most recent addition is called [Durable Functions](https://docs.microsoft.com/en-us/azure/azure-functions/durable-functions-overview){:target="_blank"}. With this extension long running and stateful function orchestrations can be developed. This is a welcome addition to the Azure serverless product suite since it is now much easier to implement function chaining and fan-in/fan-out messaging scenarios.
 
 ### How does it work?
 
@@ -37,7 +41,38 @@ This will start a new instance of an orchestration function.
 
 This [Gist](https://gist.github.com/marcduiker/e0e7cb5c7eb81614ab5a4470de95d74a){:target="_blank"} shows an HttpTrigger function which can start orchestration functions using the `orchestration/{functionName}` route of the Function App:
 
-{% gist e0e7cb5c7eb81614ab5a4470de95d74a %}
+**HttpStart.cs**
+
+```csharp
+using System.Net.Http;
+using System.Threading.Tasks;
+using Microsoft.Azure.WebJobs;
+using Microsoft.Azure.WebJobs.Extensions.Http;
+using Microsoft.Azure.WebJobs.Host;
+
+namespace DurableFunctionsDemo
+{
+    public static class HttpStart
+    {
+        [FunctionName("HttpStart")]
+        public static async Task<HttpResponseMessage> Run(
+            [HttpTrigger(AuthorizationLevel.Function, "post", Route = "orchestration/{functionName}")]HttpRequestMessage req, 
+            [OrchestrationClient]DurableOrchestrationClient orchestrationClient,
+            string functionName,
+            TraceWriter log)
+        {
+            log.Info("HttpStart triggered.");
+
+            dynamic eventData = await req.Content.ReadAsAsync<object>();
+            string instanceId = await orchestrationClient.StartNewAsync(functionName, eventData);
+
+            log.Info($"Started orchestration with ID = '{instanceId}'.");
+
+            return orchestrationClient.CreateCheckStatusResponse(req, instanceId);
+        }
+    }
+}
+```
 
 ##### Stopping an instance
 
@@ -68,9 +103,31 @@ The orchestration function requires the following input binding:
 
 `[OrchestrationTrigger]DurableOrchestrationContext orchestrationContext`
  
-This [Gist](https://gist.github.com/marcduiker/e127deda371260f71ca93b1182e35a85){:target="_blank"} shows the most basic orchestration function, which actually doesn't do any orchestration, it only retrieves input from the context:
+This [Gist](https://gist.github.com/marcduiker/e127deda371260f71ca93b1182e35a85) shows the most basic orchestration function, which actually doesn't do any orchestration, it only retrieves input from the context:
 
-{% gist e127deda371260f71ca93b1182e35a85 %}
+**HelloWorld.cs**
+
+```csharp
+using Microsoft.Azure.WebJobs;
+using Microsoft.Azure.WebJobs.Host;
+
+namespace DurableFunctionsDemo.Functions
+{
+    public static class HelloWorld
+    {
+        [FunctionName("HelloWorld")]
+        public static string Run(
+            [OrchestrationTrigger]DurableOrchestrationContext context,
+            TraceWriter log)
+        {
+            string name = context.GetInput<string>();
+            log.Info($"HelloWorld function triggered with: {name}.");
+
+            return $"Hello {name}";
+        }
+    }
+}
+```
 
 Although the `DurableOrchestrationContext` class contains about 15 methods I'll only describe a few of them in this initial post.
 
@@ -108,9 +165,9 @@ This example restarts the orchestration function and passing it a list of string
 
 `orchestrationContext.ContinueAsNew(names);`
 
-The Durable Functions documentation shows how this can be used in [Eternal Orchestrations](https://docs.microsoft.com/en-us/azure/azure-functions/durable-functions-eternal-orchestrations){:target="_blank"}.
+The Durable Functions documentation shows how this can be used in [Eternal Orchestrations](https://docs.microsoft.com/azure/azure-functions/durable-functions-eternal-orchestrations).
 
-### <a id="developing"></a>Developing Durable Functions
+### Developing Durable Functions
 
 I recommend creating compiled orchestration functions using Visual Studio 2017 because currently durable functions can only be developed in C# (support for other languages will follow).
 
@@ -124,7 +181,17 @@ I had some issues while adding this package since it has a dependency on `Micros
 
 Finally make sure you have the following local connection strings in your local.settings.json in your Function App:
 
-{% gist 1099547c20666cf179f9590e47b978ff %}  
+**local.settings.json**
+
+```json
+{
+    "IsEncrypted": false,
+    "Values": {
+    "AzureWebJobsStorage": "UseDevelopmentStorage=true;DevelopmentStorageProxyUri=http://127.0.0.1:10002/",
+    "AzureWebJobsDashboard": "UseDevelopmentStorage=true;DevelopmentStorageProxyUri=http://127.0.0.1:10002/"
+  }
+}
+```
 
 ### Next steps
 
@@ -132,4 +199,4 @@ I've now spent a couple of days tinkering with Durable Functions and I have to s
 
 In next posts I'll share more examples about the `DurableOrchestrationContext` and include a demo about the orchestration function I wrote.
 
-__[Continue with Part 2]({{ site.url}}/2017/11/07/durable-azure-functions-stateful-orchestrations-part2.html)__
+__[Continue with Part 2](/articles/durable-azure-functions-stateful-orchestrations-part2)__
