--- a/content/articles/23.hands-on-with-sitecore-helix-continuous-delivery-with-octopusdeploy.md
+++ b/content/articles/23.hands-on-with-sitecore-helix-continuous-delivery-with-octopusdeploy.md
@@ -1,15 +1,20 @@
 ---
-layout: post
+cover: /articles/2017/23.1.Octopus_diagram.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2017-01-24
 title: "Hands-on with Sitecore Helix: Continuous Delivery with Octopus Deploy"
-tags: sitecore helix habitat automated nuget octopus deploy modular architecture
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2017/01/24/Octopus_diagram.png" alt="Octopus Deploy process">
+![Octopus Deploy process](/articles/2017/23.1.Octopus_diagram.png)
 
-In my [previous post]({{ site.url}}/2017/01/03/hands-on-with-sitecore-helix-setting-up-automated-build-packaging-continuous-delivery.html) I described how to setup an automated build for a Sitecore Helix project. 
-In this post I'll be covering the configuration of the automated deployment environment using [Octopus Deploy](https://octopus.com/){:target="_blank"}.
+In my [previous post](/articles/hands-on-with-sitecore-helix-setting-up-automated-build-packaging-continuous-delivery) I described how to setup an automated build for a Sitecore Helix project. 
+In this post I'll be covering the configuration of the automated deployment environment using [Octopus Deploy](https://octopus.com/).
 
-<!--more-->
 
 ## Octopus Deploy
 
@@ -24,18 +29,18 @@ Octopus Deploy uses the following terminology:
 - _Variables_ ; allows the use of variables in deployment steps. This is useful for values which differ between environments or machine roles. 
 - _Release_ ; a version of the deployment process and associated variables.
 
-Octopus Deploy has [great documentation](http://docs.octopusdeploy.com/display/OD/Getting+started){:target="_blank"} 
+Octopus Deploy has [great documentation](http://docs.octopusdeploy.com/display/OD/Getting+started) 
 so I won't be covering all the details. 
 I will discuss the Octopus _Deployment Process_ and _Release_ since these have Sitecore (Helix) specific configurations. 
 
 ## Deployment Process
 
 A deployment process consists of deployment steps. A step is based on a step template and Octopus provides an 
-[extensive library](https://library.octopusdeploy.com/listing){:target="_blank"} of those. 
+[extensive library](https://library.octopusdeploy.com/listing) of those. 
 
 The step templates which I use most frequently are _Deploy a NuGet package_ and _Add a Script_:
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2017/01/24/octopus-most-used-step-templates.png" alt="Octopus Deploy most used step templates">
+![Octopus Deploy most used step templates](/articles/2017/23.2.octopus-most-used-step-templates.png)
 
 The deployment process for our Sitecore Helix project is constructed as follows (_PS_ for _Add a Script_ step, _NuGet_ for _Deploy a NuGet package_ step):
 
@@ -76,12 +81,12 @@ I plan to write a blog post about that one separately and to submit the script t
 
 I've setup the release versioning to use the latest available version from the NuGet packages:
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2017/01/24/release-versioning.png" alt="Release versioning">
+![Release versioning](/articles/2017/23.3.release-versioning.png)
 
 A release can be created automatically when Octopus detects a new package being pushed to its NuGet feed.
-This is configured by selecting a NuGet Package deployment step from the process.  
+This is configured by selecting a NuGet Package deployment step from the process.
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2017/01/24/automatic-release-creation.png" alt="Automatic release creation">
+![Automatic release creation](/articles/2017/23.4.automatic-release-creation.png)
 
 Although this functionality sounds great I would recommend __not__ to use this when dealing with multiple packages!
 
@@ -98,7 +103,7 @@ based on the presence of one package of which you assume is the latest in the bu
 ### Octo.exe
 
 It is much better to trigger the build by running a command line tool called `Octo.exe`.
-This tool needs to be [installed on the build server](http://docs.octopusdeploy.com/display/OD/Bamboo#Bamboo-Creatingarelease){:target="_blank"} and a post build step needs to be added which calls `Octo.exe` with the following arguments:
+This tool needs to be [installed on the build server](http://docs.octopusdeploy.com/display/OD/Bamboo#Bamboo-Creatingarelease) and a post build step needs to be added which calls `Octo.exe` with the following arguments:
 
 `create-release --project <PROJECT_NAME> --version <RELEASE_VERSION> --packageversion <PACKAGE_VERSION> --server <URL_OCTOPUS_SERVER> --apiKey <OCTOPUS_API_KEY> --releaseNotes "Some notes here about the release"`
 
@@ -114,12 +119,12 @@ Let's have a look at the available argument switches:
 I've omitted the `--version`and `--packageversion` switches in the post build job since I let Octopus determine the release number based on the latest NuGet package version available.
 And since all the NuGet packages are built with the same version number this is safe to use.
 
-An alternative of using the command line tool would be to use the [Octopus REST API](http://docs.octopusdeploy.com/display/OD/Octopus+REST+API){:target="_blank"}.
-The [OctopusDeploy-API GitHub repo](https://github.com/OctopusDeploy/OctopusDeploy-Api/tree/master/REST/PowerShell){:target="_blank"} contains loads of PowerShell scripts on how to use the REST API.
+An alternative of using the command line tool would be to use the [Octopus REST API](http://docs.octopusdeploy.com/display/OD/Octopus+REST+API).
+The [OctopusDeploy-API GitHub repo](https://github.com/OctopusDeploy/OctopusDeploy-Api/tree/master/REST/PowerShell) contains loads of PowerShell scripts on how to use the REST API.
 
 ## Multiple NuGet packages: The good, the bad and the ugly
 
-As described in my [previous post]({{ site.url}}/2017/01/03/hands-on-with-sitecore-helix-setting-up-automated-build-packaging-continuous-delivery.html) I took the approach of having NuGet packages built for each module (`csproj`) in our solution.
+As described in my [previous post](/articles/hands-on-with-sitecore-helix-continuous-delivery-with-octopusdeploy) I took the approach of having NuGet packages built for each module (`csproj`) in our solution.
 
 The reasons behind this were the following:
 
@@ -130,7 +135,7 @@ The multiple package approach also has some drawbacks:
 
 1. Many of the created NuGet packages use the same dependencies (e.g. `Sitecore.*.dll`) which means that there is a lot of duplication of referenced assemblies in these packages. Therefore the total size of the multiple NuGet packages (one for each `csproj`) is much larger than the size of just one NuGet package for the whole solution. You need to be alert of setting up retention policies on OctopusDeploy and the Tentacles to prevent disk space filling up rapidly (you need to do this anyway but it becomes a problem earlier with many packages). 
 2. When a new module is added to the Visual Studio solution, the deployment process also needs to be updated with an additional NuGet package deployment step. So you actually have a dynamic deployment process which you need to actively maintain. There are ways around this by using a custom Powershell script (see the final section of this post).
-3. Because there are more packages to deploy the process also takes longer to complete. So if you don't use a [blue-green deployment](https://martinfowler.com/bliki/BlueGreenDeployment.html){:target="_blank"}
+3. Because there are more packages to deploy the process also takes longer to complete. So if you don't use a [blue-green deployment](https://martinfowler.com/bliki/BlueGreenDeployment.html)
 strategy you have a longer downtime. The deployment process we have in place now takes about 20 minutes to deploy 48 NuGet packages.
 
 ## Moving forward
