--- a/content/articles/25.serverless-architectures-using-azure-functions.md
+++ b/content/articles/25.serverless-architectures-using-azure-functions.md
@@ -1,18 +1,24 @@
 ---
-layout: post
+cover: /articles/2017/25.1.marcduiker-on-stage.jpg
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2017-10-19
 title: "Getting started with Serverless Architectures using Azure Functions"
-tags: serverless architecture azure functions faas
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2017/10/19/marcduiker-on-stage.jpg" alt="Marc Duiker on stage">
+![Marc Duiker on stage at TechDays](/articles/2017/25.1.marcduiker-on-stage.jpg)
 
 ## Techdays 2017
 
 A few weeks ago I was presented with a fantastic opportunity, to speak at the biggest Microsoft conference in the Netherlands, TechDays 2017. The session was about my favorite subjects nowadays, serverless architectures and Azure Functions.
 
-Below you can find my slides of this session and a link to the demo I made.
+![Marc Duiker presenting at TechDays](/articles/2017/25.4.marcduiker-presenting.jpg)
 
-<!--more-->
+Below you can find my slides of this session and a link to the demo I made.
 
 ### Slides
 
@@ -28,11 +34,11 @@ Let me know if you have any questions or comments when you wan to get started wi
 
 I had a great time at TechDays, I enjoyed speaking as well as attending numerous great sessions. It was a lot of fun being there with all my colleagues.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2017/10/19/xpirit-team.jpg" alt="Xpirit team at TechDays">
+![Xpirit team at TechDays](/articles/2017/25.2.xpirit-team.jpg)
 
 At the end of the conference the two fish which were present at our Xpirit stand did not have a place to go, so I decided to adopt them :).
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2017/10/19/marcduiker-with-fish.jpg" alt="Marc Duiker holding a fish bowl">
+![Marc Duiker holding a fish bowl](/articles/2017/25.3.marcduiker-with-fish.jpg)
 
 ## Want to know more?
 
