Use OpenProcessing embeds
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/content/3.creative-coding.md
+++ b/content/3.creative-coding.md
@@ -15,22 +15,21 @@ Here are some sketches I made with [P5js](https://p5js.org/), a JavaScript libra
 
 **Perfect loop**
 
-<iframe src="https://editor.p5js.org/marcduiker/full/LL-y9TREC" width=500 height=550></iframe>
+<iframe src="https://openprocessing.org/sketch/1923671/embed/" width="500" height="500"></iframe>
 
 **Dynamic Sol LeWitt**
 
-This is an interactive sketch, click around the center of the sketch and the drawing will remain in place. Move away from the center and the drawing will move in that direction. Nodes will dissapear when they are close to the edge. 
+This is an interactive sketch, click around the center of the sketch and the drawing will remain in place. Move away from the center and the drawing will move in that direction. Nodes will disappear when they are close to the edge. 
 
-<iframe src="https://editor.p5js.org/marcduiker/full/epV-XIy2r" width=500 height=550></iframe>
+<iframe src="https://openprocessing.org/sketch/1431396/embed/" width="500" height="500"></iframe>
 
 **Single Curve Fourier Series**
 
 This is an interactive sketch, use the sliders to control the number of nodes and angle of rotation.
-
-<iframe src="https://editor.p5js.org/marcduiker/full/3QAVEB74o" width=500 height=550></iframe>
+<iframe src="https://openprocessing.org/sketch/1432049/embed/" width="500" height="500"></iframe>
 
 **Pixelart drawing tool**
 
 This is an interactive sketch, click in the cells to draw. Clicking a cell multiple times will change the color.
 
-<iframe src="https://editor.p5js.org/marcduiker/full/Kg1UwwUJT" width=500 height=575></iframe>
+<iframe src="https://openprocessing.org/sketch/1923697/embed/" width="500" height="600"></iframe>
