Add bio, rename links to about

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -15,10 +15,37 @@ Please come back later... or don't :shrug:.
 
 ![Marc Duiker pixelart avatar](/marcduiker_hardhat.gif)
 
+::card-grid
+#title
+Things I love doing
+
+#default
+  ::card
+  #title
+  Creating content
+  #description
+  :button-link[Read my articles]{ href="/articles"}
+  ::
+
+  ::card
+  #title
+  Creative coding
+  #description
+  :button-link[See my sketches]{ href="/creative-coding"}
+  ::
+
+  <!-- ::card
+  #title
+  Drawing pixel art 
+  #description
+  :button-link[See my drawings]{ href="/pixelart"}
+  :: -->
+::
+
 ### //TODO
 
 - [ ] Migrate blog posts
 - [ ] Add page on DevEx
 - [ ] Add page on pixel art
-- [ ] Add page on creative coding
+- [X] Add page on creative coding
 - [ ] Update this index page
