Move 2017 and 2018 posts

--- a/content/articles/28.durable-functions-youtube-part1.md
+++ b/content/articles/28.durable-functions-youtube-part1.md
@@ -1,12 +1,20 @@
 ---
-layout: post
+cover: /articles/2017/28.durable-functions-youtube1.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2017-11-15
 title: "Durable Functions on YouTube (part 1)"
-tags: azure durable functions serverless faas stateful orchestration
+description:
+layout: article
 ---
+
+![Durable Functions Youtube](/articles/2017/28.durable-functions-youtube1.png)
 
 ## Durable Functions Videos
 
-I've decided to create some video's to explain and demonstrate the [Durable Functions](https://docs.microsoft.com/en-us/azure/azure-functions/durable-functions-overview) framework.
+I've decided to create some video's to explain and demonstrate the [Durable Functions](https://docs.microsoft.com/azure/azure-functions/durable-functions-overview) framework.
 
 The first video covers a very basic 'Hello World' example and shows how to use the `OrchestrationClient` and `DurableOrchestrationContext` objects.
 
