--- a/content/articles/29.azure-functions-grouping-functions-in-function-apps.md
+++ b/content/articles/29.azure-functions-grouping-functions-in-function-apps.md
@@ -1,16 +1,20 @@
 ---
-layout: post
+cover: /articles/2017/29.serverless-architecture.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2017-11-21
 title: "Azure Functions Tips: Grouping Functions into Function Apps"
-tags: azure functions faas serverless deployment
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2017/11/21/serverless-architecture.png" alt="Simple serverless architecure example">
+![Durable Functions Youtube](/articles/2017/29.serverless-architecture.png)
 
 ## Guidelines for Function Apps
 
 Earlier today I read a tweet where a developer wasn't sure when to group several Azure Functions in one Function App. The Azure Function engineers responded swiftly and they'll extend the official docs with some guidelines in this area soon. I think this is a really interesting topic so let's start with a few ideas of my own.
-
-<!--more-->
 
 Azure Functions are hosted in a Function App. The following is written in the [Azure documentation](https://docs.microsoft.com/en-us/azure/azure-functions/functions-reference#function-app){:target="_blank"} about a Function App:
 
