--- a/content/articles/30.durable-functions-youtube-part2.md
+++ b/content/articles/30.durable-functions-youtube-part2.md
@@ -1,8 +1,16 @@
 ---
-layout: post
+cover: /articles/2017/30.durable-functions-youtube2.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2017-12-01
 title: "Durable Functions on YouTube (part 2) - Eternal orchestrations & external events"
-tags: azure durable functions serverless faas stateful orchestration
+description:
+layout: article
 ---
+
+![Durable Functions Youtube](/articles/2017/30.durable-functions-youtube2.png)
 
 ## Eternal orchestrations & external events
 
