--- a/content/articles/31.durable-functions-youtube-part3.md
+++ b/content/articles/31.durable-functions-youtube-part3.md
@@ -1,8 +1,16 @@
 ---
-layout: post
+cover: /articles/2018/31.durable-functions-youtube3.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2018-03-06
 title: "Durable Functions on YouTube (part 3) - The Function Chaining Pattern"
-tags: azure durable functions serverless faas stateful orchestration
+description:
+layout: article
 ---
+
+![Durable Functions Youtube](/articles/2018/31.durable-functions-youtube3.png)
 
 ## The Function Chaining Pattern
 
