--- a/content/articles/32.the-anatomy-of-function-naming.md
+++ b/content/articles/32.the-anatomy-of-function-naming.md
@@ -1,10 +1,16 @@
 ---
-layout: post
+cover: /articles/2018/32.function-naming.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2018-06-21
 title: "Durable Functions - The Anatomy of Function Naming"
-tags: azure durable functions serverless faas stateful orchestration naming
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2018/06/21/functionnaming.png" alt="How to name your Azure Functions">
+![Durable Functions Youtube](/articles/2018/32.function-naming.png)
 
 ## Function Names in the Wild
 
@@ -15,8 +21,6 @@ Whenever I see examples or implementations of Azure Functions I always see this:
 Where the function name is present as a direct string literal. I'm not questioning that it *is* a string because that's simply the way the `FunctionName` attribute works currently. I'm more concerned how the string got there. 
 
 I'd like to show two ways to refer to function names in a safe and consistent way. This is especially useful when you're using [Durable Functions](https://docs.microsoft.com/en-us/azure/azure-functions/durable-functions-overview) and need to refer to activity function names in your orchestration function.
-
-<!--more-->
 
 ## Literal Strings and Meaning
 
